--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: isotone
 Type: Package
 Title: Active set and generalized PAVA for isotone optimization
-Version: 0.8-6
-Date: 2009-08-27
+Version: 0.8-7
+Date: 2009-10-15
 Author: Jan de Leeuw, Kurt Hornik, Patrick Mair
 Maintainer: Jan de Leeuw <deleeuw@stat.ucla.edu>
 Description: This package contains two main functions: gpava() for
@@ -13,6 +13,6 @@ Description: This package contains two main functions: gpava() for
 License: GPL
 URL: http://r-forge.r-project.org/projects/psychor/
 LazyLoad: yes
-Packaged: 2009-08-27 16:49:54 UTC; patrick
+Packaged: 2009-10-15 10:31:51 UTC; pmair
 Repository: CRAN
-Date/Publication: 2009-08-30 16:01:58
+Date/Publication: 2009-10-15 10:58:03
