--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: isotone
 Type: Package
 Title: Active set and generalized PAVA for isotone optimization
-Version: 1.0-0
-Date: 2009-10-20
+Version: 1.0-1
+Date: 2011-01-22
 Author: Jan de Leeuw, Kurt Hornik, Patrick Mair
 Maintainer: Jan de Leeuw <deleeuw@stat.ucla.edu>
 Description: This package contains two main functions: gpava() for
@@ -14,6 +14,6 @@ Description: This package contains two main functions: gpava() for
 License: GPL
 URL: http://r-forge.r-project.org/projects/psychor/
 LazyLoad: yes
-Packaged: 2009-10-20 16:32:34 UTC; pmair
 Repository: CRAN
-Date/Publication: 2009-10-20 16:41:56
+Date/Publication: 2011-01-23 08:21:46
+Packaged: 2011-01-22 21:05:44 UTC; patrick
