--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,25 @@
 Package: isotone
 Type: Package
 Title: Active set and generalized PAVA for isotone optimization
-Version: 1.0-1
-Date: 2011-01-22
-Author: Jan de Leeuw, Kurt Hornik, Patrick Mair
-Maintainer: Jan de Leeuw <deleeuw@stat.ucla.edu>
-Description: This package contains two main functions: gpava() for
+Version: 1.0-2
+Date: 2014-09-07
+Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email =
+    "mair@fas.harvard.edu"), person("Jan", "De Leeuw", role = "aut"),
+    person("Kurt", "Hornik", role = "aut"))
+Author: Patrick Mair [aut, cre], Jan De Leeuw [aut], Kurt Hornik [aut]
+Maintainer: Patrick Mair <mair@fas.harvard.edu>
+Description: Contains two main functions: gpava() for
         solving general isotone regression problem using the
         pool-adjacent-violators algorithm (PAVA). activeSet() provides
         a framework of active set methods for isotone optimization
         problems with arbitrary order restrictions. Various types of
-        loss functions are pre-spcified.
-License: GPL
+        loss functions are pre-specified.
+License: GPL-2
 URL: http://r-forge.r-project.org/projects/psychor/
+LazyData: yes
 LazyLoad: yes
+ByteCompile: yes
+NeedsCompilation: yes
+Packaged: 2014-09-09 23:25:33 UTC; patrick
 Repository: CRAN
-Date/Publication: 2011-01-23 08:21:46
-Packaged: 2011-01-22 21:05:44 UTC; patrick
+Date/Publication: 2014-09-10 07:03:28
