--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,27 @@
 Package: isotone
 Type: Package
-Title: Active set and generalized PAVA for isotone optimization
-Version: 1.0-2
-Date: 2014-09-07
+Title: Active Set and Generalized PAVA for Isotone Optimization
+Version: 1.1-0
+Date: 2015-07-24
 Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email =
     "mair@fas.harvard.edu"), person("Jan", "De Leeuw", role = "aut"),
     person("Kurt", "Hornik", role = "aut"))
 Author: Patrick Mair [aut, cre], Jan De Leeuw [aut], Kurt Hornik [aut]
 Maintainer: Patrick Mair <mair@fas.harvard.edu>
-Description: Contains two main functions: gpava() for
-        solving general isotone regression problem using the
-        pool-adjacent-violators algorithm (PAVA). activeSet() provides
-        a framework of active set methods for isotone optimization
+Description: Contains two main functions: one for
+        solving general isotone regression problems using the
+        pool-adjacent-violators algorithm (PAVA); another one provides
+        a framework for active set methods for isotone optimization
         problems with arbitrary order restrictions. Various types of
-        loss functions are pre-specified.
+        loss functions are prespecified.
+Imports: graphics, stats, nnls
+Depends: R (>= 3.0.2)
 License: GPL-2
 URL: http://r-forge.r-project.org/projects/psychor/
 LazyData: yes
 LazyLoad: yes
 ByteCompile: yes
 NeedsCompilation: yes
-Packaged: 2014-09-09 23:25:33 UTC; patrick
+Packaged: 2015-07-24 08:12:19 UTC; patrick
 Repository: CRAN
-Date/Publication: 2014-09-10 07:03:28
+Date/Publication: 2015-07-24 12:16:22
